# SSSD_CP

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  genindex.html  intro.html  markdown-notebooks.html  markdown.html  notebooks.html  objects.inv  pyproject.toml  requirements.txt  run_sssd_jobs_on_colab.ipynb  search.html  searchindex.js  setup.py
.doctrees/: environment.pickle  intro.doctree  markdown-notebooks.doctree  notebooks.doctree
.github/workflows/: docker.yaml
_sources/: intro.md  notebooks.ipynb
config/: config_SSSDS4-NYISO-2-mix.json  config_SSSDS4-NYISO-3-MILLWD.json  config_SSSDS4-NYISO-3-NYC.json  config_SSSDS4-NYISO-3-all.json  config_SSSDS4-NYISO-all.json  config_SSSDS4-NYISO-split.json  config_SSSDS4-NYISO.json  config_SSSDS4-ar1.json  config_SSSDS4.json  config_SSSDSA.json
configs/: README.md  config_DiffWave.json  config_SSSDS4-NYISO-2-all-fine-tune-1.json  config_SSSDS4-NYISO-2-all-fine-tune-2.json  config_SSSDS4-NYISO-2-all.json  config_SSSDS4-NYISO-2-mix-fine-tune-1.json  config_SSSDS4-NYISO-2-mix-fine-tune-2.json  config_SSSDS4-NYISO-2-mix.json  config_SSSDS4-NYISO-3-CAPITL.json  config_SSSDS4-NYISO-3-MILLWD.json  config_SSSDS4-NYISO-3-NYC.json  config_SSSDS4-NYISO-3-all.json  config_SSSDS4-NYISO-3-mix.json  config_SSSDS4-NYISO-all.json  config_SSSDS4-NYISO-split-2.json  config_SSSDS4-NYISO-split.json  config_SSSDS4-NYISO.json  config_SSSDS4-ar1.json  config_SSSDS4.json  config_SSSDSA.json  config_toy_example.json  env.yaml  inference.yaml  model.yaml  toy_example.json  training.yaml
configs/legacy/: config_SSSDS4-NYISO-2-all-fine-tune-1.json  config_SSSDS4-NYISO-2-all-fine-tune-2.json  config_SSSDS4-NYISO-2-all.json  config_SSSDS4-NYISO-3-CAPITL.json  config_SSSDS4-NYISO-3-NYC.json  config_SSSDS4-NYISO-3-all.json  config_SSSDS4-NYISO-3-mix.json  config_SSSDS4-NYISO-all.json  config_SSSDS4-NYISO-split-2.json  config_SSSDS4-NYISO-split.json  config_SSSDS4-NYISO.json  toy_example.json
docs/report/: sssd.drawio  sssd.drawio_bigger.xml
envs/conda/: build_conda_env.sh  cauchy_mult_setup.py  conda_env_info.sh  find_conda_env.sh  pack_conda_env.sh  utils.sh
envs/docker/: Dockerfile  Dockerfile.full  Dockerfile.local  README.md
envs/jupyter/: start_jupyter_lab.sh  utils.sh
envs/notebook/: start_jupyter_lab.sh  start_notebook_server.sh  utils.sh
envs/vm/: install_on_ubuntu.sh
experiment/: _config.yml  conf.py
notebook/: MAPE.ipynb  vis.ipynb
notebook/datasets/: load-pickle-to-npy.ipynb  nyiso-load-pickle-to-npy.ipynb  pickle-loadfrst.ipynb
notebooks/: CPI.ipynb
notebooks/colab/: run_example_job.ipynb
notebooks/datasets/: fake_data.ipynb
notebooks/examples/: training.ipynb
notebooks/experiments/: CPI.ipynb  MAPE.ipynb  ar training test.ipynb  ar_training_test.ipynb  compare_einsum.ipynb  normal_plus_low_rank_measures.ipynb  vis.ipynb
scripts/: diffusion_process.sh  infer.py  inference_job.sh  train.py  training_job.sh  utils.sh
scripts/data_handler/: load_dict.py
scripts/diffusion/: diffusion_process.sh  infer.py  inference_job.sh  training_job.sh
scripts/docker/: run_diffusion.sh  run_notebook.sh
services/: jupyter-docker-compose.yaml  model-docker-compose.yaml
sssd/: get_data.py  infer.py  inference.py  inference_multiples.py  load_dict.py  train.py
sssd/config/: config_SSSDS4-NYISO-2-all-fine-tune-1.json  config_SSSDS4-NYISO-2-all-fine-tune-2.json  config_SSSDS4-NYISO-2-all.json  config_SSSDS4-NYISO-3-mix.json
sssd/core/: model_specs.py  utils.py
sssd/data/: ar_dataset.py  ar_generator.py  dataloader.py  dataset.py  generator.py  utils.py
sssd/data_handler/: get_data.py  load_dict.py
sssd/imputers/: CSDI.py  DiffWaveImputer.py  S4Model.py  SSSDS4Imputer.py  SSSDSAImputer.py
sssd/inference/: generator.py  inference.py  inference_multiples.py  util_inference_result.py  utils.py
sssd/utils/: util.py  (+3 more)
(+80 files in other folders)
